# dandelion

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  FAILURE_SCENARIOS.md  FAILURE_SCENARIOS_MULTINODE.md  README.md  cheribuild.json  morello-toolchain.txt
anakonda_iptables_manager/: Cargo.toml  run_remotely.sh
anakonda_iptables_manager/src/: main.rs
compartment/: CMakeLists.txt  README.md  compartment.h  trial.c
compartment/include/: compartment.h
compartment/src/: assembly.asm  compartment.c  compartment.h  context.h  sandbox.c
compartment/test/: CMakeLists.txt  test.c  testFunctions.asm
compartment/trial/: CMakeLists.txt  measurementTest.c  trial.asm  trial.c
dispatcher/: Cargo.toml  build.rs
dispatcher/src/: composition.rs  controller.rs  dispatcher.rs  execution_qs.rs  function_registry.rs  lib.rs  output_cache.rs  queue.rs  remote.rs  resource_pool.rs  set_registry.rs
dispatcher/src/dispatcher/: policies.rs
dispatcher/src/function_registry/: composition_builder.rs
dispatcher/src/queue/: exec.rs  policy.rs  remote.rs
dispatcher/src/queue/policy/: base.rs  data_locality.rs
dispatcher/src/tests/: composition_tests.rs  mod.rs
dispatcher/tests/: dispatcher_tests.rs
dispatcher/tests/dispatcher_tests/: combination_tests.rs  function_tests.rs  preemption_tests.rs  registry_tests.rs
machine_interface/: Cargo.toml  build.rs
machine_interface/benches/: cheri_benchmark.rs  gpu_benchmark.rs  mmu_benchmark.rs  pagetable_benchmark.rs
machine_interface/c_machine_libraries/: CMakeLists.txt  morello-toolchain.txt
machine_interface/c_machine_libraries/cheri/: CMakeLists.txt
machine_interface/c_machine_libraries/cheri/include/: cpu.h  memory.h
machine_interface/c_machine_libraries/cheri/src/: cpu.c  memory.c
machine_interface/c_machine_libraries/cheri/test/: cpu_test.c  mem_test.c  registerState.h  testFunctions.asm
machine_interface/c_machine_libraries/unity/: CMakeLists.txt
machine_interface/hip_interface/: CMakeLists.txt  basic_io.json  bigger.hsaco  combined.hsaco  foo.json  gpu_function.json  gpu_function_2.json  hip_interface.hip.cpp  inference.json  inference_batched.json  matmul.hsaco  matmul_loop.json  matmul_para.json  minimal.json  mlops.hsaco  module.hsaco
machine_interface/src/: async_runtime.rs  composition.rs  function_driver.rs  function_lib.rs  hardware_interface.rs  interface.rs  lib.rs  machine_config.rs  memory_domain.rs  preemption.rs  promise.rs  util.rs
machine_interface/src/composition/: composition_tests.rs  join_iterator.rs
machine_interface/src/function_driver/: compute_driver.rs  functions.rs  load_utils.rs  system_driver.rs  test_queue.rs  thread_utils.rs  util.rs
machine_interface/src/function_driver/compute_driver/: cheri.rs  compute_driver_tests.rs  fpga.rs  gpu.rs  kvm.rs  mmu.rs  noisol.rs  pagetable.rs  wasm.rs  wasmtime.rs
machine_interface/src/function_driver/system_driver/: async_runtime.rs  cache.rs  context_util.rs  distributed.rs  file_system.rs  http.rs  hyper.rs  memcached.rs  recovery_log.rs  request_commons.rs  reqwest.rs  system.rs  system_driver_tests.rs
machine_interface/src/function_lib/: cheri.rs  driver_tests.rs  pagetable.rs  util.rs
machine_interface/src/function_lib/cheri/: test.rs
machine_interface/src/function_lib/pagetable/: test.rs
machine_interface/src/hardware_interface/cheri/: mod.rs
machine_interface/src/hardware_interface/memory_domain/: malloc.rs
machine_interface/src/memory_domain/: bytes.rs  bytes_context.rs  cheri.rs  domain_tests.rs  gpu.rs  hyper.rs  io.rs  kvm.rs  malloc.rs  mmap.rs  mmu.rs  pagetable.rs  read_only.rs  system_domain.rs  tests.rs  wasm.rs  wasmtime.rs
machine_interface/src/util/: elf_parser.rs  layout_container.rs  mmap.rs  mmapmem.rs  shared_mem.rs
machine_interface/src/util/elf_parser/: test_elf_le_64  tests.rs
machine_interface/tests/data/: access  http_node3_middleware_app_hybrid_mmu_x86_64  matmul_loop.json  middleware_app_hybrid_mmu_x86_64  minimal.json  test.py  test_dirigent_busy  test_elf_aarch64c_basic  test_elf_aarch64c_fileio  test_elf_aarch64c_matmul  test_elf_cheri_basic  test_elf_cheri_busy  test_elf_cheri_fileio  test_elf_cheri_matmac  test_elf_cheri_matmul  test_elf_cheri_stdio  test_elf_kvm_aarch64_basic  test_elf_kvm_aarch64_busy  test_elf_kvm_aarch64_fileio  test_elf_kvm_aarch64_matmac  test_elf_kvm_aarch64_matmul  test_elf_kvm_aarch64_stdio  test_elf_kvm_x86_64_basic  test_elf_kvm_x86_64_busy  test_elf_kvm_x86_64_compression  test_elf_kvm_x86_64_fileio  test_elf_kvm_x86_64_matmac  test_elf_kvm_x86_64_matmul  test_elf_kvm_x86_64_stdio  test_elf_mmu_aarch64_basic  test_elf_mmu_aarch64_busy  test_elf_mmu_aarch64_fileio  test_elf_mmu_aarch64_matmac  test_elf_mmu_aarch64_matmul  test_elf_mmu_aarch64_stdio  test_elf_mmu_x86_64_basic  test_elf_mmu_x86_64_busy  test_elf_mmu_x86_64_compression  test_elf_mmu_x86_64_fileio  test_elf_mmu_x86_64_inference  (+77 more)
machine_interface/tests/libs/: kernelCheck.cubin  kernelCheck.ptx  module.hsaco
machine_interface/tests/python/: server.py
management/environment/: CMakeLists.txt  README.md
management/environment/include/: elfParsing.h  functionManagement.h
management/environment/src/: elfParsing.c  functionManagement.c
management/environment/test/: CMakeLists.txt  elfTest.c
multinode/: Cargo.toml  build.rs
multinode/proto/: multinode.proto
multinode/src/: client.rs  config.rs  data.rs  lib.rs  util.rs
multinode/src/client/: test.rs
net/: CMakeLists.txt
programs/my_first_program/: CMakeLists.txt  echo.c  run.py  test_simple_run.py  test_string.c  test_string_run.py
server/: CMakeLists.txt  Cargo.toml  README.md  build.rs  server.c
server/proto/: multinode.proto
server/src/: async_invocation.rs  config.rs  dirigent_proxy.rs  dirigent_service.rs  frontend.rs  lib.rs  main.rs  multinode.rs  request_parser.rs
server/tests/: server_tests.rs
server/tests/manifests/: multinode_config.json
server/tests/preload_files/: preload_cheri.json  preload_kvm_aarch64.json  preload_kvm_x86_64.json  preload_process_aarch64.json  preload_process_x86_64.json
(+532 files in other folders)
