[package]
name = "anakonda_iptables_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = { version = "0.3.28", default-features=false}
iptables = "0.6.0"
kube = "0.98.0"
kube-runtime = "0.98.0"
k8s-openapi = { version = "0.24.0", default-features = false, features = ["v1_29"] }
log = "0.4.29"
tokio = { version = "1.38.2", features = ["full"] }
anyhow = "1.0.102"
env_logger = "0.11.9"
ipnet = "2.12.0"