[package]
name = "dispatcher"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
tokio = "1"
test-log = "0.2.16"

[dependencies]
dandelion_commons = {path = "../dandelion_commons"}
machine_interface = {path = "../machine_interface", features = ["test_export"]}
futures = {version = "0.3.28", default-features = false}
log = "0.4.21"
itertools = {version = "0.11", default-features = false, features = ["use_alloc"]}
dparser = {path = "../dparser"}
crossbeam = "0.8.4"

[features]
cheri = ["machine_interface/cheri"]
wasm = ["machine_interface/wasm"]
mmu = ["machine_interface/mmu"]
kvm = ["machine_interface/kvm"]
reqwest_io = ["machine_interface/reqwest_io"]
timestamp = ["dandelion_commons/timestamp"]
gpu = ["machine_interface/gpu"]
gpu_queue = []
