[package]
name = "dispatcher"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
test-log = "0.2.16"

[dependencies]
dandelion_commons = {path = "../dandelion_commons"}
machine_interface = {path = "../machine_interface", features = ["test_export"]}
dparser = {path = "../dparser"}

futures = {version = "0.3.28", default-features = false}
itertools = {version = "0.11", default-features = false, features = ["use_alloc"]}
log = "0.4.21"
tokio = { version = "1.38.2", default-features = false, features = ["sync"]}

[features]
default = []
cheri = ["machine_interface/cheri"]
mmu = ["machine_interface/mmu"]
kvm = ["machine_interface/kvm"]
timestamp = ["dandelion_commons/timestamp"]
http_cache = ["dandelion_commons/http_cache", "machine_interface/http_cache"]
log_function_stdio = []

# Features for queue behaviour
data_locality = []
