[package]
name = "machine_interface"
version = "0.1.0"
edition = "2021"

[features]
std = []
cheri = ["std"]
mmu = ["std"]
hyper_io = ["std", "dep:hyper"]
wasm = ["std"]
wasmtime = ["std", "dep:wasmtime"]

[build-dependencies]
cmake = "0.1"

[dev-dependencies]
criterion = "0.4"
# need to lock this to older version, because morello does not yet have rustc 1.6
regex = "1.7.1"

[dependencies]
dandelion_commons = { path = "../dandelion_commons" }
# FFI dependencies
libc = "0.2"
nix = "0.26"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
core_affinity = { version = "0.8"}
futures = { version = "0.3.28" }
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", optional = true, features = ["http1", "http2", "client", "runtime"]}
libloading = { version = "0.8.1" }
log = "0.4.20"
wasmtime = { version = "15.0.1", optional = true }

# disable benchmarks in library, to not run all unit tests on every benchmark
# also needs to be disabled for criterion flags to work that are not available for tests
[lib]
bench = false

[[bin]]
name = "mmu_worker"
required-features = ["mmu"]

[[bench]]
name = "cheri_benchmark"
harness = false

[[bench]]
name = "mmu_benchmark"
harness = false
