[package]
name = "dandelion_server"
version = "0.1.0"
edition = "2021"

[dependencies]
machine_interface = { path = "../machine_interface", features = ["hyper_context"] }
dandelion_commons = { path = "../dandelion_commons" }
dispatcher = { path = "../dispatcher" }
futures = { version = "0.3.28", default-features=false}
tokio = { version = "1", features = ["full"] }
hyper = { version = "1.2", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tower = { version = "0.4.13", features = ["make"] }
core_affinity = "0.8"
num_cpus = "1.16.0"
bytes = "1.4"
http = "0.2"
log = { version = "0.4.20", features = ["serde", "release_max_level_warn"] }
env_logger = "0.10.1"
serde = "1.0.197"
serde_json = "1.0.115"
bson = "2.9.0"
serde_bytes = "0.11"
signal-hook = "0.3.17"
signal-hook-tokio = {version = "0.3.1", features = [ "futures-v0_3"]}

[dev-dependencies]
assert_cmd = "2.0"
byteorder = "1.5"
reqwest = { version = "0.11", default-features = false, features = ["blocking"] }

[features]
cheri = ["machine_interface/cheri"]
mmu = ["machine_interface/mmu"]
wasm = ["machine_interface/wasm"]
reqwest_io = ["machine_interface/reqwest_io"]
timestamp = ["dispatcher/timestamp"]